cabal-version:       2.2

name:                hsLexer
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/dgunther2001/Haskell_Lexer#readme
author:              Daniel Gunther
maintainer:          danielgunther2001@gmail.com
copyright:           2024 Daniel Gunther
category:            Lexer
build-type:          Simple
extra-source-files:  README.md

executable hsLexer
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
